<resources>
    <string name="app_name">Homemade</string>
    <string name="search_recipe">Search recipes here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nutrients">Nutrients</string>
    <string name="summary">Summary</string>
    <string name="mealCard">Meal Card</string>
    <string name="RecipeInfo">Recipe Info</string>
    <string name="nutritionFacts">Nutrition Facts</string>
    <string name="nutritionName">Nutrition Name</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="glutenFree">Gluten Free</string>
    <string name="dairyFree">Dairy Free</string>
    <string name="healthScore">Health Score</string>
    <string name="likes">Likes</string>
    <string name="ingredients">Ingredients</string>
    <string name="getRecipeDetails">Get Recipe Details</string>
</resources>