<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentRecipeInfo">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:gravity="center"
                    android:textSize="17sp"
                    android:text="@string/vegetarian"
                    android:fontFamily="@font/alegreya"
                    android:textStyle="bold|italic"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="20dp"
                    android:id="@+id/vegetarian"/>

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:id="@+id/vegetarianAns"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/veg"
                    android:scaleType="centerCrop"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="30dp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_marginStart="20dp"
                    android:layout_below="@id/vegetarian"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/vegan"
                    android:fontFamily="@font/alegreya"
                    android:textStyle="bold|italic"
                    android:textSize="17sp"
                    android:id="@+id/vegan"/>

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:id="@+id/veganAns"
                    android:src="@drawable/tick"
                    android:scaleType="centerCrop"
                    android:layout_marginBottom="10dp"
                    android:layout_below="@id/vegetarianAns"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="30dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_below="@id/vegan"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:layout_marginStart="20dp"
                    android:textSize="17sp"
                    android:text="@string/glutenFree"
                    android:fontFamily="@font/alegreya"
                    android:textStyle="bold|italic"
                    android:id="@+id/glutenFree"/>

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:id="@+id/glutenFreeAns"
                    android:scaleType="centerCrop"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/tick"
                    android:layout_below="@id/veganAns"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="30dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_height="36dp"
                    android:text="@string/dairyFree"
                    android:fontFamily="@font/alegreya"
                    android:textStyle="bold|italic"
                    android:gravity="center"
                    android:layout_below="@id/glutenFree"
                    android:textSize="17sp"
                    android:id="@+id/dairyFree"/>

                <ImageView
                    android:layout_width="36dp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="36dp"
                    android:id="@+id/dairyFreeAns"
                    android:src="@drawable/tick"
                    android:scaleType="centerCrop"
                    android:layout_below="@id/glutenFreeAns"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="30dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:layout_height="50dp"
                    android:text="@string/healthScore"
                    android:fontFamily="@font/alegreya"
                    android:textStyle="bold|italic"
                    android:layout_marginStart="20dp"
                    android:layout_below="@id/dairyFree"
                    android:textSize="17sp"
                    android:id="@+id/score"/>

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/scoreAns"
                    android:background="@drawable/health"
                    android:scaleType="centerCrop"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:fontFamily="@font/alegreya"
                    android:textSize="15sp"
                    android:layout_marginBottom="10dp"
                    android:layout_below="@id/dairyFreeAns"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/likes"
                    android:layout_marginStart="20dp"
                    android:gravity="center"
                    android:layout_below="@id/score"
                    android:textSize="17sp"
                    android:fontFamily="@font/alegreya"
                    android:textStyle="bold|italic"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/likes"/>

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/likesAns"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:fontFamily="@font/alegreya"
                    android:background="@drawable/likes"
                    android:scaleType="centerCrop"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:layout_below="@id/scoreAns"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"/>

                <LinearLayout
                    android:layout_below="@id/likes"
                    android:id="@+id/linear_layoutRecipe"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="@string/ingredients"
                            android:fontFamily="@font/alegreya"
                            android:textStyle="bold|italic"
                            android:textSize="25sp"/>

                        <TextView
                            android:id="@+id/ingredientsData"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/grey_800"
                            android:fontFamily="@font/average"
                            android:textSize="17sp"/>

                </LinearLayout>

                <Button
                    android:id="@+id/recipeButton"
                    android:layout_marginTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/getRecipeDetails"
                    android:textColor="@android:color/white"
                    android:layout_below="@id/linear_layoutRecipe"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="30dp" />
        </RelativeLayout>

</ScrollView>
